Changes in Socket.io features

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,5 +16,8 @@
       "class-methods-use-this": "off",
       "prefer-destructuring": ["error", { "object": true, "array": false }],
       "no-unused-vars": ["error", { "argsIgnorePattern": "req|res|next|val" }]
+    },
+    "parserOptions": {
+      "sourceType": "module"
     }
   }
