--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Daniyal Talat",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.20.0",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
