--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.11",
+    "pug": "^3.0.0",
     "sharp": "^0.26.0",
     "socket.io": "^2.3.0",
     "validator": "^13.1.1",
