--- a/package.json
+++ b/package.json
@@ -10,17 +10,15 @@
   "author": "Daniyal Talat",
   "license": "MIT",
   "dependencies": {
+    "@babel/core": "^7.12.3",
     "axios": "^0.20.0",
     "bcryptjs": "^2.4.3",
-    "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
-    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-mongo-sanitize": "^2.0.0",
     "express-rate-limit": "^5.1.3",
     "helmet": "^4.1.0",
-    "hpp": "^0.2.3",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.27.0",
     "mongoose": "^5.10.0",
@@ -31,7 +29,7 @@
     "sharp": "^0.26.0",
     "socket.io": "^2.3.0",
     "validator": "^13.1.1",
-    "x-xss-protection": "^2.0.0"
+    "xss-clean": "^0.1.1"
   },
   "devDependencies": {
     "eslint": "^7.7.0",
